# roque-cmap

./: README.md  main.py  pyproject.toml  pyproject.toml.bak
roque_cmap/: __init__.py  roque.py  roque_chill_200.json  roque_chill_200.pkl  roque_colors_256.json  roque_colors_256.pkl
tests/: test_roque.py
