[tool.poetry]
name = "roque-cmap"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]
readme = "README.md"
packages = [{include = "roque_cmap"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
