[project]
name = "roque-cmap"
version = "1.0.0"
description = "A Python package that provides custom color maps for use in data visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["roque_cmap"]
